Fix hidden current page on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,10 @@ button, .button{
 	color: #666;
 }
 
+.pagination .current{
+	display: inline-block;
+}
+
 /*section form checkbox/radio label*/
 .check-label_text{
 	padding-left: 0.8rem !important;
